--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
+    "@types/jest": "^29.5.13",
     "cypress": "^13.14.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
